--- a/flutter_calc/pubspec.yaml
+++ b/flutter_calc/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # formats, localizations
   intl: ^0.17.0
 
+  # http requests
+  http: ^0.13.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
